--- a/finish.html
+++ b/finish.html
@@ -3,16 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Highscores</title>
+    <title>Finish</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="script.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Capriola&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header id="highscoreHeader">Highscores</header>
-    <hr>
-    <ul></ul>
+    <div class="finishText">
+        <h1>Finish!</h1>
+    </div>
+    <div id="inputBox">
+        <input id="initials" placeholder="Your Initials"></input>
+    </div>
+    <div id submitBtn>
+        <button id="submitBtn" type="submit" onclick="saveScore()">Submit</button>
+    </div>
 
+    
+    
 </body>
 </html>
