--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz Home</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="script.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Capriola&display=swap" rel="stylesheet">
 </head>
@@ -16,7 +17,7 @@
 
     <div id="quizTitle">
         <h1>Code Quiz</h1>
-        <p>Test your knowledge with my basic coding quiz! Answer all the questions and save 
+        <p>Test your knowledge with my Breaking Bad quiz! Answer all the questions and save 
             your highscore. Be careful though, a wrong answer will take 10 seconds off your 
             time remaining. Good luck!</p>
         <a id="startQuiz" href="questions.html">Start Quiz</a>
