--- a/questions.html
+++ b/questions.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Questions</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="script.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Capriola&display=swap" rel="stylesheet">
 </head>
@@ -13,16 +14,16 @@
         <h2 id="questionHeader"> 1. Which tag has the largest text?</h2>
         <ol>
             <li>
-                <button>A: &lt;h1&gt;</button>
+                <button id="A" onclick="nextQuestion(0)">A: &lt;h1&gt;</button>
             </li>
             <li>
-                <button>B: &lt;h3&gt;</button>
+                <button id="B" onclick="nextQuestion(1)">B: &lt;h3&gt;</button>
             </li>            
             <li>
-                <button>C: &lt;h4&gt;</button>
+                <button id="C" onclick="nextQuestion(2)">C: &lt;h4&gt;</button>
             </li>            
             <li>
-                <button>D: &lt;h6&gt;</button>
+                <button id="D" onclick="nextQuestion(3)">D: &lt;h6&gt;</button>
             </li>
         </ol>
     </div>
