added in functions and finishing styles

--- a/finish.html
+++ b/finish.html
@@ -10,16 +10,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Capriola&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="finishText">
-        <h1>Finish!</h1>
-    </div>
-    <div id="inputBox">
-        <input id="initials" placeholder="Your Initials"></input>
-    </div>
-    <div id submitBtn>
-        <button id="submitBtn" type="submit" onclick="saveScore()">Submit</button>
-    </div>
-
+      <section class="finishPage">
+        <div class="finishText">
+            <h1>Finish!</h1>
+        </div>
+        <div id="inputBox">
+            <input id="initials" placeholder="Your Initials"></input>
+        </div>
+        <div id=submitButton>
+            <button id="submitBtn" type="submit" onclick="saveScore()">Submit</button>
+        </div>
+    </section>  
     
     
 </body>
