--- a/highscores.html
+++ b/highscores.html
@@ -10,9 +10,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Capriola&display=swap" rel="stylesheet">
 </head>
 <body>
+    <header id="homeLink">
+        <a class="navBar" href="index.html">Home</a>
+    </header>
     <header id="highscoreHeader">Highscores</header>
     <hr>
-    <ul></ul>
+    <ol id="scores"></ol>
 
 </body>
 </html>
