--- a/questions.html
+++ b/questions.html
@@ -10,7 +10,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Capriola&display=swap" rel="stylesheet">
 </head>
 <body>
+    <h3 id="timer"></h3>
     <div class="questionContainer">
+        
         <h2 id="questionHeader"> 1. Which tag has the largest text?</h2>
         <ol>
             <li>
