--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 </head>
 <body>
 
-    <header id="highscores">
+    <header id="highscoresLink">
         <a class="navBar" href="highscores.html">Highscores</a>
     </header>
 
     <div id="quizTitle">
         <h1>Code Quiz</h1>
         <p>Test your knowledge with my Breaking Bad quiz! Answer all the questions and save 
-            your highscore. Be careful though, a wrong answer will take 10 seconds off your 
+            your highscore. Be careful though, a wrong answer will take 5 seconds off your 
             time remaining. Good luck!</p>
         <a id="startQuiz" href="questions.html">Start Quiz</a>
     </div>
